--- a/sass/partials/content/_main-cols.scss
+++ b/sass/partials/content/_main-cols.scss
@@ -22,6 +22,7 @@
 		flex: 0 0 33%;
 		flex-direction: column;
 		min-height: 0;
+		overflow: hidden;
 
 		&.col-chats{
 			/*width: 33%;
